# backend_FH78

./: README.md  pyproject.toml
hackathon_practice/: db.sqlite3  manage.py
hackathon_practice/backend_api/: answerinstruction.txt  function.py  prompta.txt  promt.txt  qainstruction.txt  questioninstruction.txt  response.json  response.txt  systeminstruction.txt  test.py  urls.py  views.py
hackathon_practice/hackathon_practice/: asgi.py  settings.py  urls.py  wsgi.py
tests/: test_dummy.py
