[tool.poetry]
name = "hackathon-practice"
version = "0.1.0"
description = ""
authors = ["Kush <kushdesai221@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.2"
django-types = "^0.20.0"
django-stubs-ext = "^5.1.3"
fastapi = "^0.115.12"
requests = "^2.32.3"
dotenv = "^0.9.9"
djangorestframework = "^3.16.0"
api = "^0.0.7"
python-dotenv = "^1.1.0"
django-cors-headers = "^4.7.0"
google-genai = "^1.10.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
