[tool.poetry]
name = "hackathon-practice"
version = "0.1.0"
description = ""
authors = ["Kush <kushdesai221@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.2"
google-genai = "^1.10.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
